--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "all": "npm pack && lint-staged && npm test",
+    "all": "npm pack && pretty-quick --staged && npm test",
     "prepack": "tsc",
     "test": "jest",
     "semantic-release": "semantic-release",
@@ -39,8 +39,8 @@
     "@types/split2": "^4.2.0",
     "husky": "^8.0.1",
     "jest": "^27.0.6",
-    "lint-staged": "^15.0.2",
     "prettier": "^3.0.1",
+    "pretty-quick": "^3.0.0",
     "rimraf": "^5.0.1",
     "semantic-release": "^22.0.5",
     "ts-jest": "^27.0.3",
@@ -83,8 +83,5 @@
       "type": "GitHub Sponsors",
       "url": "https://github.com/sponsors/KengoTODA"
     }
-  ],
-  "lint-staged": {
-    "*.{js,ts,css,md}": "prettier --write"
-  }
+  ]
 }
